--- a/src/Manassa/Windows/AnalysisView.xaml
+++ b/src/Manassa/Windows/AnalysisView.xaml
@@ -6,114 +6,141 @@
              xmlns:windows="clr-namespace:Manassa.Windows"
              xmlns:maCharts="clr-namespace:MultiAlignCustomControls.Charting;assembly=MultiAlignCustomControls"
              mc:Ignorable="d" 
-             d:DesignHeight="435" d:DesignWidth="502">    
+             d:DesignHeight="616" d:DesignWidth="872">    
+    
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <!-- Selection Window -->
-        <StackPanel 
-            Margin="4,4,4,4"
-            Grid.Column="1">            
-            <ToggleButton 
-                x:Name="m_attributedFilter"                
-                IsChecked="False"
-                Margin="2,2,2,2"            
-                Grid.Row="1"
-                Grid.Column="5"
-                Background="GhostWhite"                
-                HorizontalAlignment="Stretch">
-                <ToggleButton.Style>
-                    <Style TargetType="{x:Type ToggleButton}">
-                        <Setter Property="Content" Value="attributed"/>
-                    </Style>
-                </ToggleButton.Style>
-            </ToggleButton>
-            <ToggleButton 
-                x:Name="m_unattributedFilter"                
-                IsChecked="False"
-                Margin="2,2,2,2"            
-                Grid.Row="1"
-                Grid.Column="5"
-                Background="GhostWhite"                
-                HorizontalAlignment="Stretch">
-                <ToggleButton.Style>
-                    <Style TargetType="{x:Type ToggleButton}">
-                        <Setter Property="Content" Value="Unattributed"/>
-                    </Style>
-                </ToggleButton.Style>
-            </ToggleButton>
-            <ToggleButton 
-                x:Name="m_unAmbiguousFilter"                
-                IsChecked="False"
-                Margin="2,2,2,2"            
-                Grid.Row="1"
-                Grid.Column="5"
-                Background="GhostWhite"                
-                HorizontalAlignment="Stretch">
-                <ToggleButton.Style>
-                    <Style TargetType="{x:Type ToggleButton}">
-                        <Setter Property="Content" Value="Unambiguous"/>
-                    </Style>
-                </ToggleButton.Style>
-            </ToggleButton>
-            <ToggleButton 
-                x:Name="m_MsMsFilter"                
-                IsChecked="False"
-                Margin="2,2,2,2"            
-                Grid.Row="1"
-                Grid.Column="5"
-                Background="GhostWhite"                
-                HorizontalAlignment="Stretch">
-                <ToggleButton.Style>
-                    <Style TargetType="{x:Type ToggleButton}">
-                        <Setter Property="Content" Value="MS/MS"/>                        
-                    </Style>
-                </ToggleButton.Style>
-            </ToggleButton>
-        </StackPanel>
-        <Grid
-            Grid.Column="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="55*"/>
-                <RowDefinition Height="45*"/>
-            </Grid.RowDefinitions>
+        <TabControl>
+            <TabItem
+                Header="Clusters"
+                >   
+                <Grid>
+        
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>                
+                        <RowDefinition Height="55*"/>
+                        <RowDefinition Height="45*"/>
+                    </Grid.RowDefinitions>
+     
+                <!-- Cluster Grid Plots -->
+                <Grid
+                    Grid.Row="0"
+                    >
 
-            <Image Grid.Column="0" Grid.Row="0"/>
-            <Image Grid.Column="0" Grid.Row="1"/>
+                    <Grid.RowDefinitions>                
+                        <RowDefinition Height="50*"/>
+                        <RowDefinition Height="50*"/>
+                    </Grid.RowDefinitions>
 
+                    <WindowsFormsHost                 
+                        Margin="5,5,5,5"
+                        Grid.Row="0"
+                        Grid.Column="0">
+                        <maCharts:ctlClusterChart
+                        Title=""
+                        LegendVisible="false"
+                        x:Name="m_clusterPlot"
+                        />
+                    </WindowsFormsHost>
+                    
+                </Grid>
+        
 
-            <!-- Cluster Grid Plots -->
-            <WindowsFormsHost Grid.Row="0"
-                              Grid.Column="0">
-                <maCharts:ctlClusterChart
-                    Title=""
-                    LegendVisible="false"
-                    x:Name="m_clusterPlot"
-                    />                    
-            </WindowsFormsHost>
-            
-            <!-- Cluster Grid Data -->
-            <windows:ClusterGrid
-                Grid.Column="1"
-                Grid.Row="0"
-                x:Name="m_clusterGrid"                
-                />
+                <!-- Cluster Grid Data -->
+                <windows:ClusterGrid
+                    Margin="5,5,5,5"
+                    Grid.Column="1"
+                    Grid.ColumnSpan ="2"
+                    Grid.Row="0"
+                    x:Name="m_clusterGrid"                
+                    />
 
-            <!-- Single cluster -->
-            <windows:ClusterControl
-                x:Name="m_clusterControl"
-                Grid.Row="1"
-                Grid.RowSpan="2"
-                Grid.Column="0"
-                Grid.ColumnSpan="2"                
-                Cluster="{Binding Mode=OneWay, ElementName=m_clusterGrid, Path=SelectedCluster}"
-                />
-        </Grid>
+                <!-- Single cluster Control-->
+                <windows:ClusterControl
+                    Margin="5,5,5,5"
+                    x:Name="m_clusterControl"
+                    Grid.Row="2"
+                    Grid.RowSpan="1"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="3"                
+                    Cluster="{Binding Mode=OneWay, ElementName=m_clusterGrid, Path=SelectedCluster}"
+                    />
+                </Grid>
+            </TabItem>
+            <TabItem
+                Header="Datasets"                
+                >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    
+                    <GridSplitter
+                        ResizeDirection="Rows"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Grid.Row="1"
+                        VerticalAlignment="Stretch"
+                        HorizontalAlignment="Stretch"
+                        Height="3"
+                        />
+                        
+                    <windows:DatasetGrid
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        x:Name="m_datasetsName"
+                        />                    
+                    
+                    
+                    
+                </Grid>
+            </TabItem>
+            <TabItem
+                Header="MS/MS"
+                >
+                <windows:MsMsGrid>
+                    
+                </windows:MsMsGrid>
+            </TabItem>
+            <TabItem
+                Header="Statistics Plots"
+                >
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    
+                    <WindowsFormsHost                 
+                        Margin="5,5,5,5"
+                        Grid.Row="0"
+                        Grid.Column="0">
+                        <maCharts:ChargeStateHistogram
+                            Title="Charge States"
+                            XAxisLabel="Charge State"
+                            YAxisLabel="Count"
+                            YAxisGridLines="True"
+                            XAxisGridLines="True"
+                            LegendVisible="False"
+                            x:Name="m_chargeStates"
+                            TitleVisible="True" />
+                    </WindowsFormsHost>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </UserControl>
