--- a/src/Manassa/Windows/FeatureGrid.xaml
+++ b/src/Manassa/Windows/FeatureGrid.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="Manassa.Windows.ClusterGrid"
+﻿<UserControl x:Class="Manassa.Windows.FeatureGrid"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:converters="clr-namespace:Manaassa.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="412" d:DesignWidth="927">
     <UserControl.Resources>
+        <converters:HasMSMSConverter x:Key="msmsConverter"/>
         <converters:BooleanToDataGridVisibilityModeConverter x:Key="boolConverter"/>
     </UserControl.Resources>
     <Grid>
@@ -19,8 +20,7 @@
                 CanUserAddRows="False"
                 CanUserDeleteRows="False"
                 CanUserReorderColumns="True"
-                CanUserSortColumns="True"
-            
+                CanUserSortColumns="True"            
                 AutoGenerateColumns="False"
                 Grid.ColumnSpan="6"
                 IsTextSearchEnabled="True"
@@ -50,15 +50,15 @@
 
             <DataGrid.Columns >
                 <!--Dataset Information-->
-                <DataGridTextColumn         Header="ID"                 CanUserSort="True"     Binding="{Binding ID}"                   IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Monoisotopic Mass"  CanUserSort="True"     Binding="{Binding MassMonoisotopic}"     IsReadOnly="True"/>
-                <DataGridTextColumn         Header="NET"                CanUserSort="True"     Binding="{Binding RetentionTime}"        IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Drift Time"         CanUserSort="True"     Binding="{Binding DriftTime}"            IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Charge"             CanUserSort="True"     Binding="{Binding ChargeState}"          IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Dataset Members"    CanUserSort="True"     Binding="{Binding DatasetMemberCount}"   IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Total Members"      CanUserSort="True"     Binding="{Binding MemberCount}"          IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Ambiguity"          CanUserSort="True"     Binding="{Binding AmbiguityScore}"       IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Tightness"          CanUserSort="True"     Binding="{Binding Tightness}"            IsReadOnly="True"/>
+                <DataGridTextColumn         Header="ID"                 CanUserSort="True"      Binding="{Binding ID}"                                              IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Dataset ID"         CanUserSort="True"      Binding="{Binding GroupID}"                                         IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Monoisotopic Mass"  CanUserSort="True"      Binding="{Binding MassMonoisotopicAligned}"                         IsReadOnly="True"/>
+                <DataGridTextColumn         Header="NET"                CanUserSort="True"      Binding="{Binding RetentionTime}"                                   IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Drift Time"         CanUserSort="True"      Binding="{Binding DriftTime}"                                       IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Charge"             CanUserSort="True"      Binding="{Binding ChargeState}"                                     IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Abundance"          CanUserSort="True"      Binding="{Binding AbundanceSum}"                                    IsReadOnly="True"/>
+                <DataGridTextColumn         Header="MS Features"        CanUserSort="True"      Binding="{Binding MSFeatures.Count}"                                IsReadOnly="True"/>
+                <DataGridTextColumn         Header="MS/MS Spectra"      CanUserSort="True"      Binding="{Binding Converter={StaticResource msmsConverter}}"        IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
