--- a/src/Manassa/Windows/MsMsGrid.xaml
+++ b/src/Manassa/Windows/MsMsGrid.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Manassa.Windows.ClusterGrid"
+﻿<UserControl x:Class="Manassa.Windows.MsMsGrid"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:converters="clr-namespace:Manaassa.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="317" d:DesignWidth="669">
     <UserControl.Resources>
         <converters:BooleanToDataGridVisibilityModeConverter x:Key="boolConverter"/>
     </UserControl.Resources>
@@ -48,17 +48,15 @@
                 </Style>
             </DataGrid.RowStyle>
 
-            <DataGrid.Columns >
+            <DataGrid.Columns >  
                 <!--Dataset Information-->
-                <DataGridTextColumn         Header="ID"                 CanUserSort="True"     Binding="{Binding ID}"                   IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Monoisotopic Mass"  CanUserSort="True"     Binding="{Binding MassMonoisotopic}"     IsReadOnly="True"/>
-                <DataGridTextColumn         Header="NET"                CanUserSort="True"     Binding="{Binding RetentionTime}"        IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Drift Time"         CanUserSort="True"     Binding="{Binding DriftTime}"            IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Charge"             CanUserSort="True"     Binding="{Binding ChargeState}"          IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Dataset Members"    CanUserSort="True"     Binding="{Binding DatasetMemberCount}"   IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Total Members"      CanUserSort="True"     Binding="{Binding MemberCount}"          IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Ambiguity"          CanUserSort="True"     Binding="{Binding AmbiguityScore}"       IsReadOnly="True"/>
-                <DataGridTextColumn         Header="Tightness"          CanUserSort="True"     Binding="{Binding Tightness}"            IsReadOnly="True"/>
+                <DataGridTextColumn         Header="ID"                 CanUserSort="True"     Binding="{Binding Feature.ID}"                           IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Dataset ID"         CanUserSort="True"     Binding="{Binding Feature.GroupID}"                      IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Precursor m/z"      CanUserSort="True"     Binding="{Binding Spectra.PrecursorMZ}"                  IsReadOnly="True"/>
+                <DataGridTextColumn         Header="MS/MS Scan"         CanUserSort="True"     Binding="{Binding Spectra.Scan}"                         IsReadOnly="True"/>
+                <DataGridTextColumn         Header="MS Scan"            CanUserSort="True"     Binding="{Binding Feature.Scab}"                         IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Monoisotopic Mass"  CanUserSort="True"     Binding="{Binding Feature.MassMonoisotopicAligned}"      IsReadOnly="True"/>
+                <DataGridTextColumn         Header="Charge"             CanUserSort="True"     Binding="{Binding Feature.ChargeState}"                  IsReadOnly="True"/>                
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
