--- a/src/Manassa/Windows/AnalysisView.xaml
+++ b/src/Manassa/Windows/AnalysisView.xaml
@@ -11,102 +11,79 @@
     <Grid>
         <TabControl>
             <TabItem
-                Header="Clusters"
-                >   
-                <Grid>
-        
+                Header="Clusters">
+                <Grid>        
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>                
+                    <Grid.RowDefinitions>
                         <RowDefinition Height="55*"/>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="45*"/>
                     </Grid.RowDefinitions>
      
-                <!-- Cluster Grid Plots -->
-                <Grid
-                    Grid.Row="0"
-                    >
-
-                    <Grid.RowDefinitions>                
-                        <RowDefinition Height="50*"/>
-                        <RowDefinition Height="50*"/>
-                    </Grid.RowDefinitions>
-
-                    <WindowsFormsHost                 
+                    <GridSplitter
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Width="3"
+                        
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" 
+                        Background="#FF00000A" />
+                    <GridSplitter
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="3"
+                        Height="3"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        Background="#FF00000A"/>
+                    
+                    <!-- Cluster Grid Plots -->
+                    <WindowsFormsHost                
                         Margin="5,5,5,5"
                         Grid.Row="0"
-                        Grid.Column="0">
+                        Grid.Column="0">                        
                         <maCharts:ctlClusterChart
-                        Title=""
-                        LegendVisible="false"
-                        x:Name="m_clusterPlot"
-                        />
-                    </WindowsFormsHost>
+                            Title=""
+                            LegendVisible="false"
+                            x:Name="m_clusterPlot"
+                            />
+                    </WindowsFormsHost> 
                     
-                </Grid>
-        
+                    <!-- Cluster Grid Data -->
+                    <windows:ClusterGrid
+                        Margin="5,5,5,5"
+                        Grid.Column="2"
+                        Grid.Row="0"
+                        x:Name="m_clusterGrid"                
+                        />
 
-                <!-- Cluster Grid Data -->
-                <windows:ClusterGrid
-                    Margin="5,5,5,5"
-                    Grid.Column="1"
-                    Grid.ColumnSpan ="2"
-                    Grid.Row="0"
-                    x:Name="m_clusterGrid"                
-                    />
-
-                <!-- Single cluster Control-->
-                <windows:ClusterControl
-                    Margin="5,5,5,5"
-                    x:Name="m_clusterControl"
-                    Grid.Row="2"
-                    Grid.RowSpan="1"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="3"                
-                    Cluster="{Binding Mode=OneWay, ElementName=m_clusterGrid, Path=SelectedCluster}"
-                    />
+                    <!-- Single cluster Control-->
+                    <windows:ClusterControl
+                        Margin="5,5,5,5"
+                        x:Name="m_clusterControl"
+                        Grid.Row="2"                    
+                        Grid.Column="0"
+                        Grid.ColumnSpan="3"
+                        Cluster="{Binding Mode=OneWay, ElementName=m_clusterGrid, Path=SelectedCluster}"/>
                 </Grid>
             </TabItem>
             <TabItem
                 Header="Datasets"                
-                >
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    
-                    <GridSplitter
-                        ResizeDirection="Rows"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        Grid.Row="1"
-                        VerticalAlignment="Stretch"
-                        HorizontalAlignment="Stretch"
-                        Height="3"
-                        />
-                        
-                    <windows:DatasetGrid
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        x:Name="m_datasetsName"
-                        />                    
-                    
-                    
-                    
-                </Grid>
+                >                                            
+                <windows:DatasetGrid
+                    x:Name="m_datasetsName"/>                
             </TabItem>
             <TabItem
                 Header="MS/MS"
                 >
-                <windows:MsMsGrid>
-                    
-                </windows:MsMsGrid>
+                <windows:MsMsViewer
+                    x:Name="m_msmsViewer">
+
+                </windows:MsMsViewer>
             </TabItem>
             <TabItem
                 Header="Statistics Plots"
